route_table.tf
#Public Route Table Creation 

resource "aws_route_table" "pub_terra_rt" {
  vpc_id = aws_vpc.terra_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terra_gw.id

  }

  tags = {
    Name = "Terra-Route-Table-Public"
  }
}


# Private route Table creation

resource "aws_route_table" "priv_terra_rt" {
  vpc_id = aws_vpc.terra_vpc.id

  tags = {
    Name = "Terra-Route-Table-Private"
  }
}

# Associate Route Table with Public Subnet

resource "aws_route_table_association" "rt_ast" {
  subnet_id      = aws_subnet.pub_subnet.id
  route_table_id = aws_route_table.pub_terra_rt.id
}

# Associate Route Table with Private Subnet

resource "aws_route_table_association" "pri_rt_ast" {
  subnet_id      = aws_subnet.pri_subnet.id
  route_table_id = aws_route_table.priv_terra_rt.id
}
